--- a/src/components/CSS/LoginCard.css
+++ b/src/components/CSS/LoginCard.css
@@ -3,24 +3,78 @@ h1{
   }
 
   .loginCard{
-    width: 700x;
+    width: 600px;
     height: 700px;
     display: flex;
     flex-direction: column;
-    margin-left: 650px;
+    margin-left: 700px;
     margin-top: 50px;
   }
 
   .upperCard{
-    width: 700px;
+    width: 600px;
     height: 600px;
     border-radius: 100px 0px 0px 0px;
     background: #E1CDCB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
   }
 
   .lowerCard{
-    width: 700px;
+    width: 600px;
     height: 100px;
     border-radius: 0px 0px 100px 0px;
     background: #919191;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .register{
+    background: #919191;
+    color: #17514D;
+    font-weight: 800;
+    border: #919191;
+    font-size: 18px;
+  }
+
+  .notYetRegistered{
+    color: #F0DEDE;
+    font-size: 22px;
+  }
+
+  .loginButton{
+    width: 450px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #17514D;
+    background: #17514D;
+    color: #F0DEDE;
+  }
+
+  .forgotPassword{
+    background: #E1CDCB;
+    color: #17514D;
+    font-weight: 800;
+    border: #919191;
+    font-size: 18px;
+  }
+
+  .emailInput{
+    width: 450px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #17514D;
+    background: #FFF;
+  }
+
+  .passwordInput{
+    height: 40px;
+    width: 450px;
+    border-radius: 4px;
+    border: 1px solid #17514D;
+    background: #FFF;
   }
