--- a/src/components/CSS/SignupCard.css
+++ b/src/components/CSS/SignupCard.css
@@ -9,7 +9,8 @@ h1{
     display: flex;
     flex-direction: column;
     margin-top: 50px;
-    margin-left: 700px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .signupUpperCard{
