--- a/src/components/CSS/BlackSearchBox.css
+++ b/src/components/CSS/BlackSearchBox.css
@@ -42,6 +42,7 @@ h1{
     font-style: normal;
     font-weight: 400;
     line-height: 150.023%;
+    margin-bottom: 1%;
   }
 
   .locationHomepage{
