--- a/src/components/CSS/Navbar.css
+++ b/src/components/CSS/Navbar.css
@@ -73,3 +73,12 @@ html{
     margin-right: 10px;
     color: #17514D;
   }
+
+  .logout{
+    background: #17514D;
+    border-radius: 9px;
+    border: 1px solid #F0DEDE;
+    width: 110px;
+    margin-right: 30px;
+    color: #F0DEDE;
+  }
