--- a/src/pages/CSS/DormPage.css
+++ b/src/pages/CSS/DormPage.css
@@ -105,7 +105,7 @@ html{
     margin-left: 2%;
   }
 
-  .dormpage-maps-rent{
+  .dormpage-address-link{
     display: flex;
     flex-direction: row;
     margin-top: auto;
@@ -120,6 +120,8 @@ html{
     font-weight: 400;
     text-decoration-line: underline;
     align-self: last baseline;
+    margin-left: auto;
+    margin-right: 1%;
   }
 
   .dormpage-rent{
@@ -130,11 +132,11 @@ html{
 
   .dormpage-dormAmenities{
     display: flex;
-    flex-direction: row;
-    width: 53%;
-    height: 80px;
+    flex-direction: column;
+    width: 69%;
+    height: 120px;
     background: rgba(0, 0, 0, 0.24);
-    margin-left: 5%;
+    margin-left: 1%;
     margin-top: 2%;
     justify-content: center;
     align-items: center;
@@ -146,10 +148,10 @@ html{
   .dormpage-dormDescription{
     display: flex;
     flex-direction: column;
-    width: 53%;
+    width: 69%;
     height: 600px;
     background: rgba(0, 0, 0, 0.24);
-    margin-left: 5%;
+    margin-left: 1%;
     margin-top: 5%;
   }
 
@@ -193,5 +195,37 @@ html{
     font-weight: 400;
     line-height: 150.023%; /* 43.507px */
     margin-left: 5%;
+  }
+
+  .dormpage-title-rent{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .dormpage-address{
+    font-size: 20px;
+  }
+
+  .dormpage-amenities-top{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .dormpage-amenities-bottom{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .vacancy{
+    margin-right: 3%;
   }
 
