Added My Dorm Listing Page and Added Cross icon on dorm Cards

--- a/src/components/CSS/DormCard.css
+++ b/src/components/CSS/DormCard.css
@@ -119,6 +119,16 @@ h1{
         margin-top: 10%;
     }
 
+    .title-close{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .crossIcon{
+        margin-left: auto;
+    }
+
 
 
 
