Search API integaration complete

--- a/src/components/CSS/Footer.css
+++ b/src/components/CSS/Footer.css
@@ -8,8 +8,8 @@
     left:0;
     bottom:0;
     right:0;
-    height: 250px;
     width: 100%;
+    height: auto;
     background: #17514D;
     display: flexbox;
   }
