--- a/src/components/CSS/DormCard.css
+++ b/src/components/CSS/DormCard.css
@@ -4,7 +4,6 @@ h1{
 
     .dormCard{
         width: 30%;
-        height: 300px;
         display: flex;
         flex-direction: column;
         margin: 2%;
@@ -120,6 +119,7 @@ h1{
     }
 
     .title-close{
+        max-height: 15%;
         display: flex;
         flex-direction: row;
         align-items: center;
