Added 3D image viewer

--- a/src/components/CSS/DormCard.css
+++ b/src/components/CSS/DormCard.css
@@ -9,6 +9,7 @@ h1{
         margin: 2%;
         border-radius: 5px;
         background: rgba(0, 0, 0, 0.19);
+        height: 330px;
     }
 
     .dormTitle{
