--- a/src/components/CSS/SignupCard.css
+++ b/src/components/CSS/SignupCard.css
@@ -86,3 +86,11 @@ h1{
     color: #c20f0f;
     font-size: 18px;
   }
+
+  .imageviewer360{
+    margin-top: 2%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
