--- a/src/pages/CSS/ListingPage.css
+++ b/src/pages/CSS/ListingPage.css
@@ -15,7 +15,7 @@ html{
     margin-left: auto;
     margin-right: auto;
     margin-top: 3%;
-    align-items: center;
+    align-items: center;;
   }
 
   .formName{
@@ -125,6 +125,17 @@ html{
   .errorMessage{
     color: #c20f0f;
     font-size: 18px;
+  }
+
+  .formContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .formHeader{
+    font-size: 20px;
   }
   
 
