--- a/src/components/CSS/Navbar.css
+++ b/src/components/CSS/Navbar.css
@@ -4,6 +4,11 @@ html{
     
   h1{
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  button{
+    font-family: 'Roboto', sans-serif;
   }
   
 
@@ -86,4 +91,5 @@ html{
     color: #F0DEDE;
     margin-left: 20px;
     font-size: 30px;
+    font-family: 'Roboto', sans-serif;
   }
