--- a/src/pages/CSS/Homepage.css
+++ b/src/pages/CSS/Homepage.css
@@ -4,6 +4,11 @@ html{
     
   h1{
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  button{
+    font-family: 'Roboto', sans-serif;
   }
 
   .mainHomepage{
